Port Forge support for Minecraft 1.19.4