@@ -68,7 +68,7 @@ class FocusDataConsistencyTest {
 		Path.of("src/main/resources/assets/attuned/lang/en_us.json");
 
 	private static final Pattern REGISTERED_FOCUS = Pattern.compile(
-		"public\\s+static\\s+final\\s+Item\\s+([A-Z0-9_]+_FOCUS)\\s*=\\s*registerFocus\\(\"([a-z0-9_]+_focus)\"\\);");
+		"registerFocus\\(\\s*\"([a-z0-9_]+_focus)\"\\s*,\\s*item\\s*->\\s*([A-Z0-9_]+_FOCUS)\\s*=\\s*item\\s*\\)");
 	private static final Pattern REGISTERED_BEHAVIOR = Pattern.compile(
 		"register\\(\\s*\"([a-z0-9_/.-]+)\"\\s*,\\s*new\\s+",
 		Pattern.DOTALL);
@@ -133,16 +133,14 @@ class FocusDataConsistencyTest {
 
 		assertEquals(registeredItemsByField.size(), registeredItems.size(),
 			"Registered shipped Focus item ids should not be duplicated");
-		assertTrue(source.contains("public static final List<Item> FOCI = List.copyOf(REGISTERED_FOCI);"),
-			"AttunedContent.FOCI should be derived from registerFocus order, not manually duplicated");
-		assertTrue(source.contains("private static final Set<Item> FOCI_SET = Set.copyOf(REGISTERED_FOCI);"),
-			"AttunedContent should keep constant-time Focus membership alongside the ordered list");
+		assertTrue(source.contains("public static final List<Item> FOCI = Collections.unmodifiableList(REGISTERED_FOCI);"),
+			"AttunedContent.FOCI should expose the deferred registerFocus order, not a manually duplicated list");
 		assertTrue(source.contains("REGISTERED_FOCI.add(item);"),
-			"registerFocus should append every Focus to the public FOCI snapshot");
+			"registerFocus should append every deferred Focus to the public FOCI view");
 		assertTrue(source.contains("public static boolean isFocus(Item item)"),
 			"AttunedContent should expose the canonical Focus item membership check");
-		assertTrue(source.contains("return item != null && FOCI_SET.contains(item);"),
-			"Focus item membership should use the set-backed lookup and reject null safely");
+		assertTrue(source.contains("return item != null && REGISTERED_FOCI.contains(item);"),
+			"Focus item membership should use the deferred Focus list and reject null safely");
 		assertTrue(source.contains("public static boolean isFocus(ItemStack stack)"),
 			"AttunedContent should expose the canonical Focus stack membership check");
 		assertTrue(!source.contains("FOCI = List.of("),
@@ -252,6 +250,7 @@ class FocusDataConsistencyTest {
 
 	@Test
 	void behaviorBackedShippedFociAreUniqueToPreventDuplicateRuntimeHooks() throws IOException {
+		Set<String> statFallbackBehaviors = Set.of("attuned:ebbstride_focus");
 		Set<String> stackableBehaviorItems = new TreeSet<>();
 		try (Stream<Path> paths = Files.list(FOCUS_DATA_DIR)) {
 			for (Path file : paths
@@ -265,7 +264,10 @@ class FocusDataConsistencyTest {
 				if (root.has("unique") && root.get("unique").getAsBoolean()) {
 					continue;
 				}
-				stackableBehaviorItems.add(root.get("item").getAsString());
+				String item = root.get("item").getAsString();
+				if (!statFallbackBehaviors.contains(item)) {
+					stackableBehaviorItems.add(item);
+				}
 			}
 		}
 		assertEquals(Set.of(), stackableBehaviorItems,
@@ -372,8 +374,8 @@ class FocusDataConsistencyTest {
 			expected("minecraft:attack_damage", "add_value", 4.0D, "+4 attack damage"),
 			expected("minecraft:armor_toughness", "add_value", 2.0D, "+2 armor toughness")));
 		assertModifierProfile(lang, "ebbstride_focus", List.of(
-			expected("minecraft:attack_speed", "add_multiplied_base", 0.15D, "+15% attack speed"),
-			expected("minecraft:fall_damage_multiplier", "add_multiplied_total", -0.4D, "softer landing")));
+			expected("minecraft:attack_speed", "add_multiplied_base", 0.15D, "+15% attack speed")));
+		assertBehaviorProfile(lang, "ebbstride_focus", "attuned:ebbstride", "softer landing");
 		assertModifierProfile(lang, "overgrowth_focus", List.of(
 			expected("minecraft:max_health", "add_value", 6.0D, "3 extra hearts"),
 			expected("minecraft:armor", "add_value", 3.0D, "+3 armor")));
@@ -714,6 +716,17 @@ class FocusDataConsistencyTest {
 			"Swim fallback should only refresh while underwater.");
 	}
 
+	private static void assertBehaviorProfile(JsonObject lang, String focusName, String behaviorId,
+			String tooltipToken) throws IOException {
+		JsonObject focus = focusDefinitionRoot(FOCUS_DATA_DIR.resolve(focusName + ".json"));
+		assertEquals(behaviorId, focus.get("behavior").getAsString(),
+			"Focus should reference its version-safe code behavior: " + focusName);
+		String effect = lang.get("item.attuned." + focusName + ".effect").getAsString()
+			.toLowerCase(Locale.ROOT);
+		assertTrue(effect.contains(tooltipToken.toLowerCase(Locale.ROOT)),
+			"Tooltip should mention '" + tooltipToken + "' for " + focusName);
+	}
+
 	private static void assertSeafarersLuckModifier(JsonObject root, String itemId, Path file) {
 		JsonElement modifiers = root.get("modifiers");
 		assertNotNull(modifiers, "Seafarers Foci should grant real player Luck while active: " + file);
@@ -782,7 +795,7 @@ class FocusDataConsistencyTest {
 		Matcher matcher = REGISTERED_FOCUS.matcher(source);
 		Map<String, String> itemsByField = new TreeMap<>();
 		while (matcher.find()) {
-			itemsByField.put(matcher.group(1), "attuned:" + matcher.group(2));
+			itemsByField.put(matcher.group(2), "attuned:" + matcher.group(1));
 		}
 		assertTrue(!itemsByField.isEmpty(), "Could not find registered Focus item fields in AttunedContent");
 		return itemsByField;
